# edge-fm-x

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: platform_3060.cmake  platform_4050.cmake  platform_5090.cmake  platform_a100.cmake  platform_a800.cmake  platform_j6m.cmake  platform_orin.cmake  platform_thor.cmake
doc/: 3060_fused_mlp_review.md  3060_qkv_oproj_bridge_review.md  3060_tuning_log.md  3060_tuning_plan.md  3060_tuning_rules.md  README.md  a800_edge_fm_optimization_journal.md  compact_vocab_contract.md  cuda_kernel_optimizer_guide.md  design.md  edge_fm_benchmark_tables.md  edge_fm_optimization_journal.md  feature_development_plan.md  orin_r36.4.3_qwen_benchmark_guide.md  owner_a_phase3_decision_gates.md  performance_optimization_summary.md  qwen2_generate_correctness_debug.md  smolvla_architecture.md  smolvla_phase1_horizon_usage.md
doc/benchmark_reports/: qwen_llm_prefill_attention_retune_20260408_device1.md
docker/: cuda12.6.3_cudnn_trt10.15.dockerfile  hrz-j6m.dockerfile  orin-l4t-jetpack-r36.4.0.dockerfile
examples/config/: engine_default.json  nano-vla.config.schema.json  operator_impl_table.json  operator_impl_table_llm.json  operator_impl_table_vlm.json
examples/qwen2.5-0.5b-instruct/: download.sh  engine_config.json  generate.py
examples/qwen2.5-1.5b-instruct/: README.md  download.sh  engine_config.json  generate.py
examples/qwen2.5-3b-instruct/: README.md  download.sh  engine_config.json  generate.py
examples/qwen2.5-vl-0.5b/: README.md  engine_config.json  generate.py
examples/qwen2.5-vl-3b-instruct/: README.md  download.sh  engine_config.json  generate.py
examples/qwen2.5-vl-7b-instruct/: README.md  download.sh  engine_config.json  generate.py
scripts/: __init__.py  bench_activation_ab.py  bench_triton_gate_up_decode.py  build_and_benchmark_full.sh  build_horizon_quant.sh  build_with_trt_pybind.sh  edge_fm_build_paths.py  edge_fm_env.sh  operator_table_utils.py  profile_edgefm_generate_case.py  profile_operator_comparison.py  profile_operator_comparison.sh  profile_vlm_prepared_case.py  refresh_operator_table_metadata.py  retune_qwen_operator_tables.py  run_benchmark_horizon_quant.sh  run_tests_horizon_quant.sh  send_progress_to_feishu.sh  temp_paths.py  tune_fused_gate_up_cublaslt.py  tune_qwen_attention_decode.py  tune_qwen_attention_prefill.py  tune_qwen_cublaslt.py  tune_qwen_decode_swiglu.py
src/: CMakeLists.txt  edge-fm.cpp  tensor.cpp
src/backends/: CMakeLists.txt  backend_artifact_cache.cpp  backend_artifact_cache.h  backend_target.h  horizon_module_emitter.cpp  horizon_module_emitter.h  horizon_runtime_backend.cpp  horizon_runtime_backend.h  runtime_backend.cpp  runtime_backend.h
src/engine/: CMakeLists.txt  compact_vocab.cpp  compact_vocab.h  engine.cpp  engine.h  engine_factory.cpp  engine_factory.h  horizon_engine.cpp  horizon_engine.h  kv_manager.cpp  scheduler.cpp  scheduler.h  stardard_engine.cpp  stardard_engine.h
src/engine/cuda/: kv_manager.cpp  kv_manager.h  scheduler.cpp  scheduler.h  standard_engine.cpp  standard_engine.h
src/engine/cuda/kernels/: decode_runtime_kernels.cu  decode_runtime_kernels.h
src/engine/experimental/speculative/: eagle_engine.h
src/engine/horizon/: engine.cpp  engine.h
src/engine/runtime/: stage_runtime.cpp  stage_runtime.h
src/engine/speculative/: eagle_engine.h
src/engine/tasks/stage_execution/: mock_stage_runner.cpp  mock_stage_runner.h  stage_execution_engine.cpp  stage_execution_engine.h
src/engine/tasks/stage_execution/horizon/: horizon_engine.cpp  horizon_engine.h
src/engine/tasks/token_generation/: compact_vocab.cpp  kv_manager.cpp  kv_manager.h  scheduler.cpp  scheduler.h
src/engine/tasks/token_generation/cuda/: scheduler.cpp  scheduler.h  standard_engine.cpp  standard_engine.h
src/engine/tasks/token_generation/cuda/kernels/: decode_runtime_kernels.cu  decode_runtime_kernels.h
src/engine/tasks/token_generation/cuda/tuning/: cuda_operator_tuner.cpp
src/engine/tasks/trajectory_planning/: planner_state_manager.cpp  planner_state_manager.h  planner_tensor_utils.cpp  planner_tensor_utils.h  trajectory_planner_engine.cpp  trajectory_planner_engine.h
src/layers/: CMakeLists.txt  activation.cu  activation.h  attention.cu  attention.h  embed_head.cu  embed_head.h  fused_gate_up_decode_trtllm.cu  gated_mlp.cu  gated_mlp.h  layer.cpp  layer.h  layernorm.cu  layernorm.h  linear.cu  linear.h  sampler.cu  sampler.h
src/layers/int4GroupwiseGemmKernels/: int4GroupwiseGemm.h  int4WoqGemmCuda.cu
src/models/: CMakeLists.txt  layered_transformer.cpp  layered_transformer.h  model.cpp  model.h  model_description.cpp  model_description.h
src/models/qwen2_5/: CMakeLists.txt  qwen2_5.cpp  qwen2_5.h  trt_linear_bridge.cpp  trt_linear_bridge.h  trt_mlp_bridge.cpp  trt_mlp_bridge.h
src/operators/: CMakeLists.txt  activation_op.cu  activation_op.h  attention_op.cu  attention_op.h  fused_gate_up_activation_op.cu  fused_gate_up_activation_op.h  linear_impl.cu  linear_registry.h  norm_op.cu  norm_op.h  operator_impl_table.cpp  operator_impl_table.h  prefill_linear_source_op.cu  prefill_linear_source_op.h  prefill_mlp_source_op.cu  prefill_mlp_source_op.h
src/operators/kernels/int4_groupwise_gemm/: dequantize.cuh  int4WoQGemvCuda.cu
src/python/: CMakeLists.txt  pybind.cpp  pybind_debug.cpp  pybind_trt_runtime.cpp
src/tuning/: cuda_operator_tuner.cpp  cuda_operator_tuner.h
src/utils/: CMakeLists.txt  backend_artifact_cache.cpp  check.h  horizon_module_emitter.cpp  horizon_module_emitter.h  logging.cpp  logging.h  metrics.h  non_copyable.h
src/utils/device/: cuda_graph.cpp  cuda_graph.h  cuda_utils.h  decode_runtime_kernels.cu  decode_runtime_kernels.h  memory.h  nvtx.h  tuning_cache.cpp  tuning_cache.h  weight_loader.cpp  weight_loader.h
tests/: pytest.ini  requirements.txt  test_all.sh
tests/cpp/: CMakeLists.txt  compact_vocab_cuda_stubs.cpp  smolvla_horizon_benchmark.cpp  smolvla_horizon_prefill_decode_smoke.cpp  test_compact_vocab.cpp  test_planner_state_manager.cpp  test_runtime_backend_helpers.cpp  test_tensor_cpu.cpp
(+153 files in other folders)
